--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,10 +16,12 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: ["3.8", "3.9", "3.10"]
-        install: [install, develop]
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
       fail-fast: false
     runs-on: ${{ matrix.os }}
+    defaults:
+      run:
+        shell: bash -l {0}
     steps:
     - uses: actions/checkout@v2
     - name: Disable etelemetry
@@ -31,18 +33,13 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - name: Update build tools
-      run: python -m pip install --upgrade pip flit
+      run: python -m pip install --upgrade pip flit_scm
 
-    - name: Install Pydra tests dependencies (develop or setup.py install)
-      if: matrix.install == 'develop' || matrix.install == 'install'
-      run: pip install ".[test]"
-
-    - name: Install dependencies (setup.py install)
-      if: matrix.install == 'install'
-      run: python setup.py install
+    - name: Install Arcana
+      run: python -m pip install .[test]
 
     - name: Pytest
-      run: pytest -vvs --cov arcana.analysis.TODO arcana.data.TODO arcana.deploy.TODO arcana.utils.TODO --cov-config .coveragerc --cov-report xml
+      run: pytest -vvs --cov arcana.bids  --cov-config .coveragerc --cov-report xml
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v2
