--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,10 @@ description = "An Arcana extension for interacting with Brain Imaging Structure 
 readme = "README.rst"
 requires-python = ">=3.8"
 dependencies = [
-    "arcana-core >=0.8",
-    "arcana-dirtree >=0.2.4",
-    "fileformats-common >=0.1",
-    "fileformats-medimage >=0.1",
+    "fileformats_common @ git+https://github.com/ArcanaFramework/fileformats-common@develop",  # "fileformats-common >= 0.1.1",
+    "fileformats_medimage @ git+https://github.com/ArcanaFramework/fileformats-medimage@develop",  # "fileformats-medimage >= 0.1",
+    "arcana_core @ git+https://github.com/ArcanaFramework/arcana-core@develop",  # "arcana-core >=0.8.6",
+    "arcana_dirtree @ git+https://github.com/ArcanaFramework/arcana-dirtree@develop",  # "arcana-dirtree >=0.2.4",,
 ]
 license = {file = "LICENSE"}
 authors = [{name = "Thomas G. Close", email = "tom.g.close@gmail.com"}]
