--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,8 @@ readme = "README.rst"
 requires-python = ">=3.7"
 dependencies = [
     "arcana >=0.8.6",
-    "fileformats >= 0.3.3",
-    "fileformats-medimage >= 0.2.1",
+    "fileformats[extended] >= 0.3.3",
+    "fileformats-medimage[extended] >= 0.2.1",
     "jq >=1.4.0",
 ]
 license = {file = "LICENSE"}
