--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,10 +33,10 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - name: Update build tools
-      run: python -m pip install --upgrade pip flit_scm
+      run: python -m pip install --upgrade pip
 
     - name: Install Arcana
-      run: python -m pip install .[test]
+      run: python -m pip install .[test] fileformats-testing
 
     - name: Pytest
       run: pytest -vvs --cov arcana.bids  --cov-config .coveragerc --cov-report xml
